[workspace]
resolver = "3"
members = ["blocks", "docsite"]

[workspace.dependencies]
lumen-blocks = { path = "blocks" }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "f717a8e184a522d078b70bb4b4d62a5f9a99ddfc" }
use-mdbook = { git = "https://github.com/DioxusLabs/docsite.git", rev = "029a529a02f3fe3d0b24c143bc7722850986dbfa" }
mdbook-shared = { git = "https://github.com/DioxusLabs/docsite.git", rev = "029a529a02f3fe3d0b24c143bc7722850986dbfa" }
mdbook-gen = { git = "https://github.com/DioxusLabs/docsite.git", rev = "029a529a02f3fe3d0b24c143bc7722850986dbfa" }
syn = "2.0.98"
tracing = { version = "0.1", features = ["std"] }
docs = { path = "./docsite/docs" }
dioxus-sdk-time = { git = "https://github.com/FastTrackStudios/sdk", branch = "dioxus-0.8" }
lucide-dioxus = { git = "https://github.com/FastTrackStudios/lucide", branch = "dioxus-0.8" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
